# SpeechRecognition_bot

./: .env.example  Dockerfile  pyproject.toml
app/: __main__.py  loader.py
app/data/: config.py
app/handlers/users/: __init__.py  help.py  recognition.py  recognition_retry.py  start.py
app/keyboards/inline/: __init__.py  callbacks.py  retry_keyboard.py
app/middlewares/: __init__.py  throttling.py
app/utils/: __init__.py  file.py  recognition.py
